# KoAT2-Releases

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .merlin  .ocamlformat  .ocamlinit  Checklist_probabilistic.md  Dockerfile  Dockerfile.evaluation  Dockerfile.webinterface  Improvements_for_KoAt_probabilistic.md  LICENSE  Location.ml  LocationTest.ml  Makefile  OMakefile  OMakeroot  Poly.ml  Poly.mli  PolyTest.ml  Polynomials.ml  README.md  TODO  Tools.ml  Tools.mli  advanced_test.sh  apply_to_all.sh  bug.koat  build_container.sh  cfr_mprf.koat  cfr_mprf2.koat  compile_static_binary.sh  docker_entry.sh  dune  dune-project  gmon.out  koat2.opam  koat2_external.opam  opam  out.html  (+11 more)
src/: .gitignore  .merlin  OMakefile  dune  ocamldoc.out
src/approximation/: Approximation.ml  Approximation.mli  SizeApproximationType.ml  SizeApproximationType.mli  TransitionApproximationType.ml  TransitionApproximationType.mli
src/bounds/: Analysis.ml  Analysis.mli  Approximation.ml  Approximation.mli  ApproximationModules.ml  Automorphism.ml  Automorphism.mli  BottomUpHelper.ml  BottomUpHelper.mli  BoundTypes.ml  Bounds.ml  BoundsHelper.ml  CFR.ml  CFR.mli  CacheManager.ml  Chaining2.ml  ClassifiedBound.ml  ClassifiedBound.mli  ComputeClassicalBounds.ml  CostBounds.ml  DummyRF.ml  ExpBoundsHelper.ml  ExpNontrivialSizeBounds.ml  ExpNontrivialSizeBounds.mli  ExpRankingBounds.ml  ExpSizeBounds.ml  ExpTrivialSizeBounds.ml  ExpTrivialSizeBounds.mli  ExpectedLocalChangeBound.ml  Invariants.ml  Invariants.mli  JordanNormalForm.py  LexRSM.ml  LexRSM.mli  Loops.ml  MPRF_Coefficient.ml  MPRF_Coefficient.mli  MPRF_Invariants.ml  MPRF_Invariants.mli  MRF_Coefficient.ml  (+50 more)
src/constraints/: ApronInterface.ml  Atoms.ml  Atoms.mli  ConstraintImpl.ml  ConstraintTypes.ml  Constraints.ml  Constraints.mli  Formula.ml  Formula.mli  Formulas.ml  Formulas.mli  Makefile  OMakefile
src/exact_runtime/: exact_runtime.sage  exact_runtime_from_file.sage  from_polynomial.sage
src/exactruntime/: .gitignore  ExactBound.ml  ExactBound.mli  ExactLexer.mll  ExactParser.mly  ExactProgramTypes.ml  ExactProgramTypes.mli  ExactReader.ml  ExactReader.mli  OMakefile  exact_runtime_from_file.sage  exact_runtime_from_koat.py  exact_runtime_from_koat.sage  (+1 more)
(+2189 files in other folders)
