; treat all modules in subdirectories as if they were on the root directory. Hence we can keep the diretory structure
(include_subdirs unqualified)

(library
 (public_name koat2)
 (name koat2)
 (preprocess
   (pps
     ppx_deriving.eq
     ppx_deriving.ord
     ppx_deriving.show))
 (libraries
   batteries
   netstring
   z3
   ocamlgraph
   parmap
   fpath
   apron
   apron.octD
   apron.boxD
   apron.ppl
   ))
