; treat all modules in subdirectories as if they were on the root directory. Hence we can keep the diretory structure
(include_subdirs unqualified)

(library
 (public_name koat2)
 (name koat2)
 (preprocess
   (pps
     ppx_deriving.eq
     lens.ppx_deriving
     ppx_deriving.ord
     ppx_sexp_conv
     ppx_deriving.show))
 (libraries
   batteries
   netstring
   base
   stdio
   z3
   ocamlgraph
   parmap
   fpath
   apron
   apron.octD
   apron.boxD
   apron.ppl
   ))
